added social media url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,10 +145,10 @@
 
 				<!-- Icons -->
 					<ul class="actions">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://twitter.com/sahilchitkara" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/Mr.Chitkara" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.linkedin.com/pub/sahil-chitkara/30/977/479" class="icon fa-google-plus"><span class="label">LinkedIn</span></a></li>
+						<li><a href="http://instagram.com/sahilchitkara" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 
 				<!-- Menu -->
