chnaged linkedIn icon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,7 +147,7 @@
 					<ul class="actions">
 						<li><a href="https://twitter.com/sahilchitkara" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/Mr.Chitkara" class="icon fa-facebook" target="_blank><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.linkedin.com/pub/sahil-chitkara/30/977/479" class="icon fa-google-plus" target="_blank><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/pub/sahil-chitkara/30/977/479" class="icon fa-linkedin" target="_blank><span class="label">LinkedIn</span></a></li>
 						<li><a href="http://instagram.com/sahilchitkara" class="icon fa-instagram" target="_blank><span class="label">Instagram</span></a></li>
 					</ul>
 
