--- a/public/css/ie/v8.css
+++ b/public/css/ie/v8.css
@@ -1,108 +1,26 @@
-/*********************************************************************************/
-/* Basic                                                                         */
-/*********************************************************************************/
+/*
+	Aerial by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+*/
 
-	/* Section/Article */
+/* Header */
 
-		section,
-		article
-		{
-		}
-		
-			section > .last-child,
-			article > .last-child
-			{
-				margin-bottom: 0;
-			}
-
-			section.last-child,
-			article.last-child
-			{
-				margin-bottom: 0;
-			}
-
-	/* Form */
-
-		form input[type="text"],
-		form input[type="email"],
-		form input[type="password"],
-		form select,
-		form textarea {
-			position: relative;
-			-ms-behavior: url('css/ie/PIE.htc');
-			border: solid 1px #ccc;
-		}
-
-	/* Button */
-		
-		input[type="button"],
-		input[type="submit"],
-		input[type="reset"],
-		.button {
-			position: relative;
-			-ms-behavior: url('css/ie/PIE.htc');
-		}
-
-			.button.down {
-				text-indent: 0;
-			}
-	
-/*********************************************************************************/
-/* Intro                                                                         */
-/*********************************************************************************/
-
-	#intro {
-		-ms-behavior: url('css/ie/backgroundsize.min.htc');
-		background: url('../../images/intro.jpg');
-		background-size: cover;
-	}
-	
-		#intro:before {
-			content: '';
-			background: url('../images/overlay.png');
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
-		}
-
-/*********************************************************************************/
-/* One                                                                           */
-/*********************************************************************************/
-
-	#one {
-		-ms-behavior: url('css/ie/backgroundsize.min.htc');
-		background: url('../../images/one.jpg');
-		background-size: cover;
+	#header nav a {
+		position: relative;
+		border: solid 1px white;
+		border-radius: 100%;
+		-ms-behavior: url("css/ie/PIE.htc");
 	}
 
-		#one:before {
-			content: '';
-			background: url('../images/overlay.png');
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
+		#header nav a:before {
+			border: 0;
 		}
 
-/*********************************************************************************/
-/* Two                                                                           */
-/*********************************************************************************/
+/* Footer */
 
-	#two {
-		-ms-behavior: url('css/ie/backgroundsize.min.htc');
-		background: url('../../images/two.jpg');
-		background-size: cover;
+	#footer {
+		background-image: url("images/footer.png");
+		background-position: bottom left;
+		background-repeat: repeat-x;
 	}
-
-		#two:before {
-			content: '';
-			background: url('../images/overlay.png');
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
-		}
